welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:7: error: illegal start of simple expression
        if(cigars>=40 && cigars<=60)){
                                    ^